RESOLVED FIXED46083
REGRESSION(67790): jsc tests are failed with YARR interpreter
https://bugs.webkit.org/show_bug.cgi?id=46083
Summary REGRESSION(67790): jsc tests are failed with YARR interpreter
Peter Varga
Reported 2010-09-20 05:52:46 PDT
Some tests fail with YARR interpreter since r67790 (https://bugs.webkit.org/show_bug.cgi?id=45787): ecma_2/RegExp/exec-002.js ecma_3/RegExp/octal-001.js ecma_3/RegExp/perlstress-002.js ecma_3/RegExp/regress-103087.js ecma_3/RegExp/regress-165353.js ecma_3/RegExp/regress-169497.js ecma_3/RegExp/regress-191479.js ecma_3/RegExp/regress-216591.js ecma_3/RegExp/regress-24712.js ecma_3/RegExp/regress-85721.js js1_2/regexp/everything.js js1_2/regexp/interval.js js1_2/regexp/regress-9141.js 13 regressions found. These tests terminate by segmentation fault. I don't fully investigate the a problem yet but I think it is caused by the patch of the "Yarr JIT code checks BOL (^) each time through loop when in subexpression" bug. I created a simple testcase too: "a".match(/((a)*)/);
Attachments
proposed patch (1.63 KB, patch)
2010-09-20 06:27 PDT, Peter Varga
no flags
Peter Varga
Comment 1 2010-09-20 06:27:21 PDT
Created attachment 68075 [details] proposed patch
Geoffrey Garen
Comment 2 2010-09-20 11:31:43 PDT
Comment on attachment 68075 [details] proposed patch r=me
WebKit Commit Bot
Comment 3 2010-09-20 12:29:43 PDT
Comment on attachment 68075 [details] proposed patch Clearing flags on attachment: 68075 Committed r67869: <http://trac.webkit.org/changeset/67869>
WebKit Commit Bot
Comment 4 2010-09-20 12:29:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.