2010-09-20  Peter Varga  <pvarga@inf.u-szeged.hu>

Reviewed by Geoffrey Garen.

        REGRESSION(67790): jsc tests are failed with YARR interpreter
        https://bugs.webkit.org/show_bug.cgi?id=46083

        Fix the initializing of the lastSubpatternId member of
        parentheses.

        * yarr/RegexCompiler.cpp:
        (JSC::Yarr::RegexPatternConstructor::atomParenthesesEnd):

Canonical link: https://commits.webkit.org/58574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67869 268f45cc-cd09-0410-ab3c-d52691b4dbfc