JavaScriptCore/yarr/RegexCompiler.cpp
@@ -375,7 +375,7 @@ public:
         PatternDisjunction* parenthesisDisjunction = m_alternative->m_parent;
         m_alternative = m_alternative->m_parent->m_parent;
 
-        PatternTerm lastTerm = m_alternative->lastTerm();
+        PatternTerm& lastTerm = m_alternative->lastTerm();
         
         unsigned numParenAlternatives = parenthesisDisjunction->m_alternatives.size();
         unsigned numBOLAnchoredAlts = 0;
